changed background color

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
   </div>
   <div id="portfolio" class="portfolio">
-    <div class="heading"><h2>Latest Project</h2></div>
+    <div class="heading"><h2>Latest Projects</h2></div>
     <div class="portfolio-1">
       <div class="portfolio-1-image-1">
         <div class="card" style="width: 18rem;">
@@ -176,6 +176,7 @@
     </div>
   </div>
   <div id="contact" class="contact">
+    <div class="heading"><h2>Contacts</h2></div>
     <div class="ui inverted form">
       <div class="field">
         <label>Text</label>
