--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
       <h1 class="heading">Hi,I'm Abeetha Abeysundera</h1>
       <h2 class="item-3">Full Stack Developer</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus iure
-        sapiente aspernatur tempora numquam nesciunt? Dolore repellat
-        quibusdam reiciendis dolores unde dignissimos ipsa velit id recusandae
-        sunt, maiores laudantium nesciunt?
+        A responsible, enthusiastic & passionate graduate striving to become a professional in the IT industry. Always energetic and eager to learn new skills & Good team player with great interpersonal communication skills who are looking for a challenging professional career as a Software Engineer.
       </p>
       <!-- <button class="ui inverted basic button">Hire Me</button>
         <button class="ui inverted primary basic button">Lets Talk</button> -->
@@ -63,10 +60,9 @@
       <h1>About Me</h1>
       <h2 class="item-3">Full Stack Developer</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus iure
-        sapiente aspernatur tempora numquam nesciunt? Dolore repellat
-        quibusdam reiciendis dolores unde dignissimos ipsa velit id recusandae
-        sunt, maiores laudantium nesciunt?
+        I am a graduate of Faculty of Applied Sciences,Rajarata University of SriLanka, My degree emphasis is in Computer Science and Mathematics.
+
+        I have been coding for the past two years and have experience with a variety of languages, including Java, JavaScript,HTML 5 and CSS. In addition to my coding skills, I am also proficient in MS Excel,Word and have experience with SQL.
       </p>
     </div>
   </div>
