--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     </div>
   </div>
   <div id="services" class="services">
+    <div class="services-heading"><h2>services</h2></div>
+    <div class="services-1">
     <div class="card" style="width: 18rem">
       <img
         src="https://e7.pngegg.com/pngimages/651/48/png-clipart-web-development-responsive-web-design-web-developer-software-developer-outgoing-web-design-logo.png"
@@ -74,10 +76,10 @@
       <div class="card-body">
         <h5 class="card-title">Web App Development</h5>
         <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
+          <!-- Some quick example text to build on the card title and make up the
+          bulk of the card's content. -->
         </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-primary">Click Here</a>
       </div>
     </div>
     <div class="card" style="width: 18rem">
@@ -85,10 +87,10 @@
       <div class="card-body">
         <h5 class="card-title">Desktop App Development</h5>
         <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
+          <!-- Some quick example text to build on the card title and make up the
+          bulk of the card's content. -->
         </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-primary">Click Here</a>
       </div>
     </div>
     <div class="card" style="width: 18rem">
@@ -97,15 +99,16 @@
       <div class="card-body">
         <h5 class="card-title">Mobile App Development</h5>
         <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
+          <!-- Some quick example text to build on the card title and make up the
+          bulk of the card's content. -->
         </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-primary">Click Here</a>
       </div>
+    </div>
     </div>
   </div>
   <div id="portfolio" class="portfolio">
-    <div class="heading"><h2>Latest Projects</h2></div>
+    <div class="portfolio-heading"><h2>Latest Projects</h2></div>
     <div class="portfolio-1">
       <div class="portfolio-1-image-1">
         <div class="card" style="width: 18rem;">
@@ -207,9 +210,4 @@
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
   <script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-  <script src="semantic/dist/semantic.min.js"></script>
-</body>
-</html>
+  src="https://code.jquery.com/j
