card title changed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
   </div>
   <div id="services" class="services">
-    <div class="services-heading"><h2>services</h2></div>
+    <div class="services-heading"><h2>Services</h2></div>
     <div class="services-1">
     <div class="card" style="width: 18rem">
       <img
@@ -114,8 +114,8 @@
         <div class="card" style="width: 18rem;">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKm5b7nsAZ8xdXtm5L2hO1I2N1vnryjP9YfWFbto4YsRT9l1AuwwtuuxwjlZelMSWI5vA&usqp=CAU" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Student Management System</h5>
+            <p class="card-text">Developed a Student Management System using Angular for front End and Node.js for back End.Used GIT for version control.used javascript to add dynamic content to web pages. </p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
@@ -124,9 +124,9 @@
         <div class="card" style="width: 18rem;">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwUcRsCD-kikxYax8Jgp0H_9Sfbk8BKXCFdlsMcERftQHMrTJ4DvS4HC7OsOEpwXu2_n4&usqp=CAU" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Chat App Desktop App</h5>
+            <p class="card-text">Used java Socket build the application using intellij.Used Hibernate as database connection.</p>
+            <a href="#" class="btn btn-primary">Click Here</a>
           </div>
         </div>
       </div>
@@ -134,9 +134,9 @@
         <div class="card" style="width: 18rem;">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnCpCcBArGF9vXaFoEMQszjnXJhco77G-jsCy-iwFG3xPsRxvm1VnTdI716hFeqfEQp7g&usqp=CAU" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Designed a Web Page for hotel management system</h5>
+            <p class="card-text">Used HTML and CSS to build the application using intellij.Used Bootstrap to make the web page responsive.</p>
+            <a href="#" class="btn btn-primary">Click Here</a>
           </div>
         </div>
       </div>
@@ -146,9 +146,9 @@
         <div class="card" style="width: 18rem;">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMwO2hPstVWZwoz2kmHiOkfL3Pv7Hj0Q94C6xQf5Xkg3gR0WA2MUjx5pf7fXS0C0Ag1qw&usqp=CAU" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Easy Point Of Sale System</h5>
+            <p class="card-text">•	Used HTML,CSS,Bootstrap and Javascript to build the application using intellij.Used GitHub For Version Control.</p>
+            <a href="#" class="btn btn-primary">Click Here</a>
           </div>
         </div>
       </div>
@@ -156,9 +156,9 @@
         <div class="card" style="width: 18rem;">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRR_wB9Er6wjy_CM_Yn0ecaTJ9gQ2SqQL_2bqiOcz6gcKoDQhL-nRWHUWSzP4rS9jJ1Uv0&usqp=CAU" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Hotel Management System - JSP</h5>
+            <p class="card-text">Used GIT for version control.Used MVC as architecture.Used JavaScript to add dynamic content to web pages.Worked with CSS and Bootstrap to create a responsive web design for multiple pages.</p>
+            <a href="#" class="btn btn-primary">Click Here</a>
           </div>
         </div>
       </div>
@@ -166,9 +166,9 @@
         <div class="card" style="width: 18rem;">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbFGW5PKM0R15qXQCSLkrbVoebCBEi20AdqXAhxUraqBM_BPAASFylV8sUyHO7Gv1zDts&usqp=CAU" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Easy Point Of Sale System </h5>
+            <p class="card-text">Developed a Student Management System using Angular for front End and Spring boot for back End.Used GIT for version control.used javascript to add dynamic content to web pages.</p>
+            <a href="#" class="btn btn-primary">Click Here</a>
           </div>
         </div>
       </div>
